project/stage/semantic_tests/reject/void_param.ul
void main() {

}

void foo(void a) { }
